Add Dashboard,Add ProductCategry, Add SalseMan Add Roll WiseOutlet

--- a/app/src/main/res/layout/activity_add_outlet.xml
+++ b/app/src/main/res/layout/activity_add_outlet.xml
@@ -198,7 +198,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="15sp"
             android:layout_marginTop="10sp"
-            android:text="Select City"
+            android:text="Select Area"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/selectCity"
@@ -221,6 +221,50 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/select_area_text_view" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/select_outlet_on_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15sp"
+            android:layout_marginTop="10sp"
+            android:text="Outlet On"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/selectArea"
+            />
+
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/selectOutletOn"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="15sp"
+            android:layout_marginRight="15sp"
+            android:layout_marginTop="5dp"
+            android:autofillHints="Outlet"
+            android:background="@drawable/rounded_corners_edittext_dark"
+            android:gravity="center"
+            android:padding="6dp"
+            android:textColor="@color/textColorSecondary"
+            android:textColorHint="@color/textColorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/select_outlet_on_text_view" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textViewOutletSince"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15sp"
+            android:layout_marginTop="10sp"
+            android:text="Outlet Since Date"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/selectOutletOn"
+            />
+
+
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextAddressPrimary"
@@ -238,7 +282,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.888"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/selectArea" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewOutletSince" />
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextPinCode"
@@ -275,7 +319,6 @@
             app:layout_constraintHorizontal_bias="0.888"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPinCode" />
-
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonSubmitOutlet"
