--- a/app/src/main/res/layout/fragment_product_category.xml
+++ b/app/src/main/res/layout/fragment_product_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.product.ProductCategoryFragment">
+    tools:context=".ui.manageproduct.ProductCategoryFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/productCategoryName"
@@ -16,7 +16,7 @@
         android:hint="Category Product"
         android:inputType="text|textNoSuggestions"
         android:textSize="20sp"
-        android:padding="6dp"
+        android:padding="4dp"
         android:textAlignment="viewStart"
         android:textColor="#000"
         android:textColorHint="#000"
@@ -36,7 +36,7 @@
         android:hint="Search"
         android:imeOptions="actionSearch"
         android:inputType="textNoSuggestions"
-        android:padding="5dp"
+        android:padding="4dp"
         android:textColor="@color/textColorSecondaryLight"
         android:textColorHint="@color/textColorPrimaryDark"
         android:textSize="14sp"
@@ -75,6 +75,7 @@
         android:text="Add Product Category"
         android:textSize="20sp"
         android:layout_margin="10sp"
+        android:visibility="gone"
         android:textColor="@color/white"
         android:background="@color/socialColorFacebook"
         app:layout_constraintStart_toStartOf="parent"
