--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -60,13 +60,11 @@
             </RelativeLayout>
 
             <GridLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:columnCount="2"
+                android:layout_gravity="center"
                 android:layout_marginTop="-80dp"
-                android:padding="5dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
                 >
 
                 <androidx.cardview.widget.CardView
