--- a/app/src/main/res/layout/activity_add_product_brand.xml
+++ b/app/src/main/res/layout/activity_add_product_brand.xml
@@ -32,7 +32,7 @@
 
 
         <ImageView
-            android:id="@+id/select_table_image"
+            android:id="@+id/imageViewProductBrand"
             android:layout_width="350dp"
             android:layout_height="200dp"
             android:cropToPadding="false"
@@ -43,18 +43,19 @@
             />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textViewProductCategoryName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="15sp"
-            android:layout_marginBottom="-10sp"
+            android:textSize="20dp"
             android:text="Select Product Category"
             />
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/selectOutlet"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="10dp"
+            android:layout_margin="10dp"
+            android:visibility="invisible"
             android:autofillHints="Outlet"
             android:background="@drawable/rounded_corners_edittext_dark"
             android:gravity="center"
@@ -64,7 +65,7 @@
 
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/editTextProductName"
+            android:id="@+id/editTextProductBrandName"
             android:layout_width="match_parent"
             android:layout_height="@dimen/input_field_height"
             android:layout_margin="15dp"
@@ -79,7 +80,7 @@
 
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttonSubmitProduct"
+            android:id="@+id/buttonSubmitProductBrand"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
             android:layout_margin="15dp"
