--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -52,7 +52,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_margin="10dp"
-                    android:src="@drawable/logo_atoz"
+                    android:src="@drawable/app_logo"
                     android:layout_toRightOf="@id/textViewPersonName"
                     />
 
