--- a/app/src/main/res/layout/fragment_product_category.xml
+++ b/app/src/main/res/layout/fragment_product_category.xml
@@ -13,7 +13,7 @@
         android:layout_margin="15dp"
         android:layout_marginTop="12dp"
         android:gravity="start|center_vertical"
-        android:hint="Category Product"
+        android:hint="Category"
         android:inputType="text|textNoSuggestions"
         android:textSize="20sp"
         android:padding="4dp"
