--- a/app/src/main/res/layout/activity_outlet_details.xml
+++ b/app/src/main/res/layout/activity_outlet_details.xml
@@ -323,6 +323,11 @@
 
                         </LinearLayout>
 
+                        <Button
+                            android:id="@+id/buttonPlaceOrder"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Place Order"/>
                     </LinearLayout>
 
 
