--- a/app/src/main/res/layout/activity_add_product_brand.xml
+++ b/app/src/main/res/layout/activity_add_product_brand.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
+    android:background="@drawable/gradient"
     android:layout_height="match_parent">
 
 
@@ -22,7 +23,8 @@
             android:layout_marginTop="20dp"
             android:padding="20dp"
             android:hint="Select Product Brand Image"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:textAlignment="center"
             android:layout_gravity="center_vertical"
             android:textStyle="bold"
@@ -47,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="15sp"
+            android:textColor="@color/white"
             android:textSize="20dp"
             android:text="Select Product Category"
             />
