--- a/app/src/main/res/layout/activity_add_product_category.xml
+++ b/app/src/main/res/layout/activity_add_product_category.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
+    android:background="@drawable/gradient"
     android:layout_height="match_parent">
 
 
@@ -22,8 +23,9 @@
                 android:layout_marginTop="20dp"
                 android:padding="20dp"
                 android:hint="Select Product Image"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:layout_gravity="center_vertical"
                 android:textStyle="bold"
                 android:textSize="20dp"
