--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -66,5 +66,6 @@
     <color name="colorAccentGrey">#b3b3b3</color>
     <color name="colorAccentOrange">#f04e42</color>
     <color name="dividerLight">#cccccc</color>
+    <color name="windowBackgroundLight">#f2f2f2</color>
 
 </resources>
