--- a/app/src/main/res/layout/activity_past_ordered_products.xml
+++ b/app/src/main/res/layout/activity_past_ordered_products.xml
@@ -7,26 +7,26 @@
     tools:context=".ui.manageproduct.productcategorylist.ProductCategoryFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textViewProductBrandName"
+        android:id="@+id/textViewOrderAmount"
         android:layout_width="160sp"
         android:layout_height="40dp"
         android:layout_margin="15dp"
         android:layout_marginTop="12dp"
         android:gravity="start|center_vertical"
-        android:hint="Category Product"
+        android:hint="Order Details"
         android:inputType="text|textNoSuggestions"
-        android:textSize="20sp"
         android:padding="4dp"
         android:textAlignment="viewStart"
         android:textColor="#000"
         android:textColorHint="#000"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/searchProducts"
+        android:id="@+id/searchProductBrand"
         android:layout_width="200sp"
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
@@ -40,9 +40,10 @@
         android:textColor="@color/textColorSecondaryLight"
         android:textColorHint="@color/textColorPrimaryDark"
         android:textSize="14sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.905"
-        app:layout_constraintStart_toStartOf="@+id/textViewProductBrandName"
+        app:layout_constraintStart_toStartOf="@+id/textViewOrderAmount"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
@@ -54,44 +55,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchProducts"
+        app:layout_constraintTop_toBottomOf="@id/searchProductBrand"
         app:layout_constraintVertical_bias="0.019" />
 
+    <include
+        android:id="@+id/layoutOrderBasicDetails"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        layout="@layout/pattern_past_order_list"
+        app:layout_constraintTop_toBottomOf="@id/view"
+        />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewProductsList"
+        android:id="@+id/recyclerViewPastOrderdProductList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scrollbars="none"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAddProducts"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonAddProducts"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Add Product"
-        android:textSize="20sp"
-        android:layout_margin="10sp"
-        android:visibility="gone"
-        android:textColor="@color/white"
-        android:background="@color/socialColorFacebook"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/layoutOrderBasicDetails" />
 
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
