--- a/app/src/main/res/layout/pattern_past_order_list.xml
+++ b/app/src/main/res/layout/pattern_past_order_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    android:id="@+id/mainCardView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/red"
     android:layout_margin="3dp"
     card_view:cardElevation="0dp"
     card_view:cardCornerRadius="2dp"
@@ -31,7 +32,7 @@
                 android:textColor="@color/textColorSecondaryDark" />
 
             <TextView
-                android:id="@+id/order_id"
+                android:id="@+id/textViewOrderId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Order Id"
@@ -67,7 +68,7 @@
                     android:textColor="@color/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/order_products_count"
+                    android:id="@+id/textViewProductsCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -96,7 +97,7 @@
                     android:textColor="@color/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/order_price"
+                    android:id="@+id/textViewOrderPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -124,11 +125,67 @@
                     android:textColor="@color/textColorSecondary" />
 
                 <TextView
-                    android:id="@+id/order_date"
+                    android:id="@+id/textViewOrderDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="Order Date"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorAccentBlue"
+                    android:textAlignment="textEnd"
+                    android:gravity="end"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="2dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:text="Order For"
+                    android:textSize="14sp"
+                    android:textColor="@color/textColorSecondary" />
+
+                <TextView
+                    android:id="@+id/textViewOrderFor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:text="Order For"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorAccentBlue"
+                    android:textAlignment="textEnd"
+                    android:gravity="end"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="2dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:text="Order By"
+                    android:textSize="14sp"
+                    android:textColor="@color/textColorSecondary" />
+
+                <TextView
+                    android:id="@+id/textViewOrderBy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:text="Order By"
                     android:textSize="14sp"
                     android:textColor="@color/colorAccentBlue"
                     android:textAlignment="textEnd"
@@ -157,7 +214,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/order_status"
+                android:id="@+id/textViewOrderStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:text="Processing"
